# RentSecureBE

./: .clinerules  .cov_direct  .coveragerc  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  01_repository_inventory.md  AI_ENGINEERING_PLAYBOOK.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_BASELINE_V1.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_V1.1_IMPLEMENTATION_MASTER_PLAN.md  ARCHITECTURE_V1.1_RELEASE_CANDIDATE.md  CLEANUP_REPORT.md  CLEANUP_VERIFICATION_REPORT.md  DOCUMENTATION_GOVERNANCE_SPECIFICATION.md  ENGINEERING_BACKLOG.md  ENGINEERING_STANDARDS.md  IMPLEMENTATION_READINESS_AUDIT.md  IMPLEMENTATION_STEP_60.md  PHASE_0_EXECUTION_PLAN.md  PHASE_1_3_MIGRATION_READINESS_CERTIFICATION.md  PHASE_2A_ARTIFACT_DEPENDENCY_AUDIT.md  PR002_IMPLEMENTATION_SPEC.md  PR003_IMPLEMENTATION_SPEC.md  PR004_IMPLEMENTATION_SPEC.md  PR005_IMPLEMENTATION_SPEC.md  PR008A_IMPLEMENTATION_SPEC.md  PR008B_IMPLEMENTATION_SPEC.md  PR008C_IMPLEMENTATION_SPEC.md  PR008D_IMPLEMENTATION_SPEC.md  PR008E_IMPLEMENTATION_SPEC.md  PR008F_IMPLEMENTATION_SPEC.md  PR008_IMPLEMENTATION_SPEC.md  PROJECT_CONTEXT.md  PROJECT_OVERVIEW.md  Project_Architecture.md  (+51 more)
.continue/agents/: new-config.yaml
.githooks/: pre-push
.github/: SECURITY_AUDIT.md  dependabot.yml
.github/workflows/: BRANCH_PROTECTION_VALIDATOR_README.md  architecture-guard.yml  architecture.yml  backend-ci.yml  benchmark.yml  branch-protection-validator.yml  branch-protection.yml  checkout-diagnostic.yml  ci-metrics.yml  ci.yml  codeql.yml  contract-tests.yml  deploy-readiness.yml  deploy.yml  django-check.yml  hypothesis.yml  lint.yml  load-test.yml  migration-rollback.yml  mutation.yml  nightly.yml  performance.yml  quality.yml  rollback.yml  runtime-measurement.yml  sbom.yml  security-deep.yml  security.yml  test.yml  uml-validation.yml  uml.yml  weekly.yml
.hypothesis/constants/: 036ba3e70cd4216c  0476bcf55874276d  0702119c27431639  0a1e84da7db8b6a2  0bd4f40016de8252  0c7635a32adac571  0e7f5215d6ad0f9d  11bb826014e0b18b  14dbf408e5d58ea4  152110bfd9b54654  178f3ce8bd02c6a1  1887af2e1e760990  19b491c322c56df7  1de58b943290eb20  1e40586d9800d546  1f51e250a5e62565  1fca0f84649eb53d  20a5710e564229f6  251c9a7da808970d  28f16d6db3511438  2b8f58fde01dc89a  2c42fe69622fd855  2fc68dc5d2485823  318d0614a88ad461  33c8ed0bfd7de15b  34e34bde1e60fd4b  368e4f691934c691  418e55458d5ae4e3  444b03f8b9f935ea  44e661625e1b3afb  46426588a877e28b  49d68bd3a29f51e3  4a105a214210185a  4e69d481bfb617e0  4f45fe5b05e3d1b4  507854b3827fa10a  525f0b07813e7c86  53a25d8d405d8d3f  53a5768a99ffcf5d  54e5f881315f852b  (+79 more)
.kilo/: dependency_analysis_report.md  kilo.jsonc
.kilo/agent/: README.md  backend-architect.md
.sonarlint/: connectedMode.json
ai_alerts/: apps.py  models.py  services.py
ai_assistant/: apps.py  receivers.py  urls.py  views.py
ai_platform_shared_be/: asgi.py  settings.py  urls.py  wsgi.py
architecture/: ARCHITECTURE_PRINCIPLES.md  CODING_STANDARDS.md  README.md  ROADMAP.md  dependency-rules.md  import-layers.md  module-boundaries.md
ci_dashboard/: __init__.py  apps.py  executor.py  models.py  tests.py  urls.py  views.py  workflow_parser.py
communication/: utils.py  views.py
core/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
dashboard/: agreement_status.html  tests.py  urls.py  views.py
docs/: BUSINESS_LOGIC_AND_SUBSCRIPTION.md  README.md  architecture-contract.md  ci-cd-pipeline.md  ci-cd-upgrade-report.md  governance.md  kilo-architecture-spec.md
documents/: tests.py  urls.py  utils.py  views.py
file_generater/: apps.py  urls.py  utils.py
finance/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
itr_filing_assistant/: apps.py  models.py  utils.py
notification/: apps.py  models.py  services.py  signals.py  test_extra_charge_reminders.py  urls.py  utils.py  views.py
payments/: apps.py  models.py  signals.py  urls.py  views.py
properties/: TEST_DOCUMENTATION.md  __init__.py  apps.py  business_rules.md  constants.py  feature_enforcer.py  models.py  original_models.py  pdf_utils.py  refactored_models_combined.py  scheduler.py  serializers.py  signals.py  test_api_integration.py  test_e2e_comprehensive.py  test_leegality.py  test_loopholes_critical.py  tests.py  urls.py  utils.py  views.py
referral_and_earn/: apps.py  models.py  signals.py
rentsecure_be/: asgi.py  rent_record_models.py  settings.py  type_compat.py  types.py  urls.py  wsgi.py
report_docs/: PROJECT_CONTEXT.md  PROJECT_OVERVIEW.md  Project_Architecture.md  Project_Folder_Structure.md  README.md  ci_cd_audit_report.md  ci_cd_phase1_diffs.md  dependency_audit_phase2_index.md  dependency_audit_phase2_part2.md  dependency_audit_phase2_part4.md  dependency_audit_phase2_validation_part2.md  dependency_audit_phase3_future_aware_part2.md  dependency_audit_phase4_validation_part2.md  dependency_changes_report.md  dependency_diff.md  validation_report.md
scripts/: arch_audit.py  architecture_contract.py  branch_protection_validator.py  check_api_contracts.py  check_perf_thresholds.py  harden_actions.py  seed_load_test_data.py  validate_coverage_xml.py
shared/: README.md  constants.py  domain_events.py  enums.py  exceptions.py  fields.py  interfaces.py  type_compat.py  types.py  utils.py  validators.py
smartbot/: actions.py  apps.py  intents.py  models.py  tasks.py  tests.py  views.py  whatsapp_service.py
test/: generate_pdf.py  rent_agreement.html
test scripts/: core_test_script.py
tests/: conftest.py  factories.py  property_dossier.html  rest_recept.html  test_api_contracts.py  test_core_hypothesis.py  test_management_commands.py  test_performance_benchmarks.py  test_properties_hypothesis.py  test_property_limits.py  test_query_count.py  test_usage_limit.py
tools/: autofix.py  ci_guard.py  migration_guard.py  migration_rollback_validator.py  report_generator.py  security_guard.py  ship.py
wealth_concierge_platform/: __init__.py  admin.py  apps.py  models.py  scheduler.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
(+692 files in other folders)
