[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
  | \.pytest_cache
  | \.github
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "C", "N", "I", "S", "B"]
exclude = ["**/.venv/**", "**/venv/**", "**/migrations/**", "**/__pycache__/**", ".github/**"]

[tool.ruff.per-file-ignores]
"**/migrations/**" = ["ALL"]
"**/tests/**" = ["S101"]
"**/*_tests.py" = ["S101"]

[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
init-hook = "import sys; sys.path.append('.')"
ignore = ["migrations", ".venv", "venv", "tests"]
django-settings-module = "rentsecure_be.settings"
jobs = 1

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
show_column_numbers = true
pretty = true
exclude = '(migrations|tests|venv|\.venv|\.pytest_cache)'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rentsecure_be.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --strict-config --tb=short --durations=10 --cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["rentsecure_be", "ai_assistant", "core", "dashboard", "documents", "finance", "notification", "properties", "referral_and_earn", "smartbot"]
omit = ["*/tests/*", "*/test_*.py", "*/tests.py", "*/migrations/*", "*/conftest.py", "*/venv/*", "*/.venv/*", "*/__pycache__/*", "*/.pytest_cache/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = 90
