[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.nox
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
  | \.pytest_cache
  | \.github
  | \.kilo/.*
  | node_modules
  | htmlcov
  | site-packages
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "**/.nox/**",
    "**/.venv/**",
    "**/venv/**",
    "**/site-packages/**",
    "**/build/**",
    "**/dist/**",
    "**/node_modules/**",
    "**/htmlcov/**",
    "**/.pytest_cache/**",
    "**/migrations/**",
    "**/__pycache__/**",
    ".github/**",
    "properties/refactored_models_combined.py",
    "properties/original_models.py",
    "properties/_legacy/**",
    "properties/test_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "S", "B", "UP"]
ignore = ["I001"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = ["ALL"]
"**/tests/**" = ["S101", "S105", "S106", "S108"]
"**/*_tests.py" = ["S101", "S105", "S106", "S108"]
"**/test_*.py" = ["E501", "S101", "S105", "S106", "S108"]
"**/tests.py" = ["S101", "S105", "S106", "S108"]
"core/tests/**" = ["S106"]
"documents/tests.py" = ["S106"]
"**/__init__.py" = ["F403"]
"management/commands/**" = ["E501"]
"rentsecure_be/settings.py" = ["S105"]

[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
init-hook = "import sys; sys.path.append('.')"
ignore = ["migrations", ".venv", "venv", "tests"]
ignore-patterns = ["^test_.*\\.py$", "^.*_tests\\.py$", "^tests\\.py$"]
django-settings-module = "rentsecure_be.settings"
jobs = 1
persistent = "no"

[tool.mypy]
python_version = "3.12"
platform = "linux"
follow_imports = "silent"
cache_dir = ".mypy_cache"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
no_implicit_optional = true
no_implicit_reexport = true
check_untyped_defs = true
strict_equality = true
strict_optional = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
pretty = true
error_summary = true
color_output = true
incremental = true
exclude = '(?x)(\\.venv|venv|build|dist|\\.mypy_cache|\\.pytest_cache|__pycache__|migrations|tests/|tests\\.py$|test_[^/]*\\.py$|properties/_legacy/|properties/refactored_models_combined\\.py|properties/original_models\\.py)'

[[tool.mypy.overrides]]
module = "factory.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instaloader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instagram_private_api.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twilio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weasyprint.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fpdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fpdf2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xlsxwriter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deep_translator.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gtts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "firebase_admin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pylint.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ipython.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nox"
ignore_missing_imports = true

[tool.mypy.plugins.django-stubs]
django_settings_module = "rentsecure_be.settings"

[tool.mypy.plugins.drf-stubs]
django_settings_module = "rentsecure_be.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rentsecure_be.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --strict-config --tb=short --durations=10 --cov=rentsecure_be --cov=ai_assistant --cov=core --cov=dashboard --cov=documents --cov=finance --cov=notification --cov=properties --cov=referral_and_earn --cov=smartbot --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]
testpaths = ["."]

 [tool.coverage.run]
 branch = true
 source = ["rentsecure_be", "ai_assistant", "core", "dashboard", "documents", "finance", "notification", "properties", "referral_and_earn", "smartbot"]
 omit = [
     "*/tests/*",
     "*/test_*.py",
     "*/tests.py",
     "*/migrations/*",
     "*/conftest.py",
     "*/venv/*",
     "*/.venv/*",
     "*/__pycache__/*",
     "*/.pytest_cache/*",
     "*/properties/original_models.py",
     "*/properties/refactored_models_combined.py",
     "*/properties/_legacy/*",
     "*/manage.py",
 ]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.bandit]
exclude = [
    "/venv/",
    "/.venv/",
    "/migrations/",
    "/tests/",
    "/.github/",
    "/properties/_legacy/",
    "/properties/refactored_models_combined.py",
    "/properties/original_models.py",
    "/management/",
]
skips = ["S404", "S403"]

[tool.vulture]
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "migrations",
  "__pycache__",
  ".pytest_cache",
  ".github",
  ".kilo",
  "properties/_legacy",
  "properties/refactored_models_combined.py",
  "properties/original_models.py",
  "properties/signals",
  "core/signals.py",
  "referral_and_earn/signals.py",
]
min_confidence = 80
paths = [
    "rentsecure_be",
    "core",
    "properties",
    "finance",
    "notification",
    "documents",
    "smartbot",
    "referral_and_earn",
    "ai_assistant",
    "dashboard",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["rentsecure_be", "core", "properties", "finance", "notification", "documents", "smartbot", "referral_and_earn", "ai_assistant", "dashboard", "ci_dashboard"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "__pycache__", ".venv", "venv", "build", "dist", ".nox", "site-packages", "node_modules", "htmlcov", ".pytest_cache"]
skip_glob = [
    "**/migrations/*.py",
    "**/__pycache__/*.py",
    ".kilo/**/*.py",
    ".hypothesis/**/*.py",
    ".nox/**/*.py",
    "**/site-packages/**/*.py",
    "node_modules/**/*.py",
    "htmlcov/**/*.py",
    ".pytest_cache/**/*.py",
]
